almost freaking there

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,9 +22,11 @@
 }
 
 #profile_pic{
-  border-radius: 50%;
+  border-radius: 5px;
   border-style: solid;
   border-color: black;
+  width: 400px;
+  height: 400px;
 }
 
 #conversation-body {
@@ -74,12 +76,13 @@ body {
 
 }
 
-// a:hover { 
-//   background-color: lavender;
-// }
+a:hover { 
+  background-color: rgba(212,175,55, 0.3);;
+
+}
 
 #pro_business{
-  background-color: rgba(80, 14, 107, 0.9);
+  background-color: rgba(212,175,55, 0.9);;
 }
 
 
@@ -370,4 +373,55 @@ ul.social-icons {
 }
 .fa-google-plus:hover {
     background-color: #e25714;
+}
+
+// TABLES
+
+@media only screen and (max-width: 800px) {
+    
+    /* Force table to not be like tables anymore */
+  #no-more-tables table, 
+  #no-more-tables thead, 
+  #no-more-tables tbody, 
+  #no-more-tables th, 
+  #no-more-tables td, 
+  #no-more-tables tr { 
+    display: block; 
+  }
+ 
+  /* Hide table headers (but not display: none;, for accessibility) */
+  #no-more-tables thead tr { 
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+ 
+  #no-more-tables tr { border: 1px solid #ccc; }
+ 
+  #no-more-tables td { 
+    /* Behave  like a "row" */
+    border: none;
+    margin: 10px;
+    position: relative;
+    white-space: normal;
+    text-align:left;
+  }
+ 
+  #no-more-tables td:before { 
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%; 
+    padding-right: 10px; 
+    white-space: nowrap;
+    text-align:left;
+    font-weight: bold;
+  }
+ 
+  /*
+  Label the data
+  */
+  #no-more-tables td:before { content: attr(data-title); }
 }
