--- a/app/assets/stylesheets/businesses.scss
+++ b/app/assets/stylesheets/businesses.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.business_cat{
+	width: 500px;
+	height: auto;
+	border-color: #D4AF37;
+	border-style: solid;
+	border-width: 5px;
+	border-radius: 5px;
+	padding: 3%;
+
+
+
+}
