--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -1,34 +1,44 @@
-<div class="center">
-  <h2 style="color: #D4AF37">Your Purchase History:</h2>
+<div class="row" data-aos="fade-up" data-aos-duration="1500">
+    <div class="center">
+      <h2 style="color: #D4AF37">Your Purchase History:</h2>
+    </div>
+
+    <div id="no-more-tables">
+
+    <table class="col-md-12 table table-condensed" align="center">
+      <tr style="color: #D4AF37; font-size: 20px" align="center">
+        <th class="center" style="margin: 10%">Image</th>
+        <th class="center" style="margin: 10%">Item</th>
+        <th class="center" style="margin: 10%">Price</th>
+        <th class="center" style="margin: 10%">Shipping Cost </th>
+        <th class="center" style="margin: 10%">Seller</th>
+        <th class="center" style="margin: 10%">Color</th>
+        <th class="center" style="margin: 10%">Size</th>
+        <th class="center" style="margin: 10%">Quantity</th>
+        <th class="center" style="margin: 10%">Date Purchased</th>
+      </tr>
+
+      <% @orders.each do |order| %>
+        <tr class="business_table">
+          <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture %></td>
+          <td class="center"><%= order.product.title %></td>
+          <td class="center"><%= number_to_currency(order.product.price) %></td>
+          <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
+          <td class="center"><%= order.seller.username %> <br>Email: <%= order.seller.email %> <br> Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.seller.id), method: :post, style: "color: #D4AF37" %></td>
+          <td class="center"><%= order.color %></td>
+          <td class="center"><%= order.size %></td>
+          <td class="center"><%= order.quantity %></td>
+          <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
+        </tr>
+      <% end %>
+    </table>
+
+    </div>
+
+        <div class="row" style="margin-left: 5%">
+          <%= paginate @orders %>
+       </div>
 </div>
-
-<table class="table">
-  <tr style="color: #D4AF37; font-size: 20px" align="center">
-    <th class="center">Image</th>
-    <th class="center">Item</th>
-    <th class="center">Price</th>
-    <th class="center">Shipping Cost </th>
-    <th class="center">Seller</th>
-    <th class="center">Color</th>
-    <th class="center">Size</th>
-    <th class="center">Quantity</th>
-    <th class="center">Date Purchased</th>
-  </tr>
-
-  <% @orders.each do |order| %>
-    <tr class="business_table">
-      <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture %></td>
-      <td class="center"><%= order.product.title %></td>
-      <td class="center"><%= number_to_currency(order.product.price) %></td>
-      <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
-      <td class="center"><%= order.seller.username %> Email: <%= order.seller.email %> || Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.seller.id), method: :post %></td>
-      <td class="center"><%= order.color %></td>
-      <td class="center"><%= order.size %></td>
-      <td class="center"><%= order.quantity %></td>
-      <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
-    </tr>
-  <% end %>
-</table>
 
 <br>
 
