--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,7 +6,7 @@
 	</div>
 
 
-	<%= render 'form', product: @product %>
+	<%= render 'form_new', product: @product %>
 
 	<%= link_to 'Back To Products', products_path, :class => "btn", :style => "color: black; background-color: #D4AF37; margin: 3%;" %>
 
