--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -5,8 +5,8 @@
 			<%= f.select :rating, [1,2,3,4,5], :class => "rev_c", :style => "width: 20px"%>
 		</div>
 
-		<div style="margin-bottom: 15px; color: #D4AF37; width: 150px">
-			<%= f.input :comment  %>
+		<div style="margin-bottom: 15px; color: #D4AF37;">
+			<%= f.input :comment, style: "width: 250px"  %>
 		</div>
 		
 		<br>
