--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -7,6 +7,9 @@
           data-amount="4999"
           data-label="Sign Me Up!"
 		  data-name="The Black Women is God Stores"
+		  data-billing-address="true"
+		  data-zip-code="true"
+		  data-locale="auto"
           >
 </script>
 
