--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,27 +1,44 @@
 <div class="container">
   
-<div class="row" align="center">
-  <div class="col-md-4" align="center">
-     <%= image_tag @business.image(:medium), :style => "width: 100%; height: 100%; margin: 5%;" %> 
-     <h2 style="color: #D4AF37;"> <%= @business.title %></h2>
+  <div class="row" align="center">
 
-  </div>
-     <div class="col-md-5 pull-right" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 15px; margin: 10px">
-       <p style="font-size: 18px"><%= @business.description %></p>
-       <p><strong><%= @business.business_category.name %></strong></p>
-     </div>
-     <div class="col-md-5 pull-right" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 15px; font-size: 18px; margin: 10px">
+    <div class="col-md-5" style="margin: 3%">
+      <h2 style="color: #D4AF37;"> <%= @business.title %></h2>
+      <h2><%= link_to @business.user.username, user_path(@business.user), :style => "color: #D4AF37" %></h2>
+      <%= image_tag @business.artwork, :style => "width: 340px; height: 400px; margin: 5%;" %> 
       
-      <p><strong>Address:</strong><%= @business.address %></p>
-      <p><strong>City:</strong><%= @business.city %></p>
-      <p><strong>State:</strong><%= @business.state.name %></p>
-      <p><strong>Email:</strong><%= @business.email %></p>
-      <p><strong>Hours:</strong><%= @business.hours %></p>
-      <p><strong>Number:</strong><%= @business.number %></p>
-     </div>
-     
-  
-</div>
+    </div>
+
+    <div class="col-md-5" style="margin: 3%">
+
+      <div class="row">
+        <div style="width: 100%; color: #D4AF37; background-color: rgba(212,175,55, 0.1); padding: 2%; width: 450px; word-wrap: break-word; margin-bottom: 5%; border-radius: 5px; ">
+          <h3>Description</h3>
+          <p style="font-size: 18px"><%= @business.description %></p>
+          <p><strong><%= @business.business_category.name %></strong></p>
+        </div>
+
+      </div>
+
+      <div class="row" style="width: 100%; color: #D4AF37">
+        <p><strong>Address:</strong><%= @business.address %></p>
+        <p><strong>City:</strong><%= @business.city %></p>
+        <p><strong>State:</strong><%= @business.state.name %></p>
+        <p><strong>Email:</strong><%= @business.email %></p>
+        <p><strong>Hours:</strong><%= @business.hours %></p>
+        <p><strong>Number:</strong><%= @business.number %></p>
+      </div>
+
+      <div class="row">
+        <div align= "center" >
+          <%= carousel_for(@business.selections) %>
+        </div>
+      </div>
+       
+    </div>
+
+    
+  </div>
 
 </div>
 
