--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,7 @@
 	<div class="col-md-12 center" align="center" id="review_row">
 
 		<h1 style="color:  #D4AF37"> New Review </h1>
+		<p style="color:  #D4AF37">Tell Them How You Really Feel!</p>
 
 		<div>
 			<%= render 'form' %>
