--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,64 +1,80 @@
   <!-- ################# Bio ################# -->
 <div class="row">
-  <div class="col-md-4" align="center">
+  <div class="col-md-5" align="center">
     <div>
         <% if @user.id == current_user.id %>
         <% if @user.avatar.attached? %>
             <%= image_tag (@user.avatar), id: "profile_pic" %> 
         <% end %>
             <h2 style="color: #D4AF37">&nbsp Hello <%= @user.username %>!</h2>
-            <%= link_to 'Chat', conversations_path %>
+            <%= link_to 'CHAT', conversations_path, :class => "btn", :style => "color: black; background-color: #D4AF37; width: 180px; font-size:20px " %>
 
 
 
           <% else %>
-          <% if @user.avatar.attached? %>
+          <% if @user.avatar.attached? %> 
             <%= image_tag (@user.avatar), id: "profile_pic" %> 
           <% end %>
             <strong><h3><%= @user.username %>'s Profile</h3></strong>
           
-              <%= link_to 'Message', conversations_path(author_id: current_user.id, receiver_id: @user.id), method: :post %>
-
-
-
-           
+              <%= link_to 'Message', conversations_path(author_id: current_user.id, receiver_id: @user.id), method: :post %>         
         <% end %>
-        
-  
-  </div>
-    <div style="background-color: #D4AF37; border-radius: 10px; color: black;">
-      <div align="center">
-        <h4>Followers</h4>
-        <h4><%= link_to @user.followers_count, followers_path(@user) %></h4>
-        <h4>Following</h4>
-         <h4><%= link_to @user.followees_count, following_path(@user) %></h4>
-      </div>
-
-      <div style="font-size: 20px;">
-
-        <% if current_user.follows?(@user) %>
-
-          <%= link_to('Unfollow', unfollow_user_path(@user), :style => "color: black;", method: :post) %>
-
-              <% else %>
-
-          <%= link_to('Follow', follow_user_path(@user), :style => "color: black;", method: :post) %>
-
-        <% end %>
-      </div> 
-
     </div>
   </div>
 
-  <div class="col-md-6 pull-right" style="color: #D4AF37">
-    <h3><strong>Bio</strong></h3>
-    <p class="" style="font-size: 15px"><%= @user.bio %></p>
+  <div class="col-md-5" align="center" style="color: #D4AF37; width: 500px; margin-left: 10%; margin-top: 5%;">
+
+    <div>
+      <div class="row" style="margin-bottom: 10%">
+        <div style="background-color: #D4AF37; border-radius: 10px; color: black; padding: 10px">
+          <div class="row" align="center"> 
+
+            <div class="col-md-6">
+                <h4>Followers</h4>
+                <h4><%= link_to @user.followers_count, followers_path(@user), :style => "color:black;" %></h4>
+            </div>
+            <div class="col-md-6">
+                <h4>Following</h4>
+               <h4><%= link_to @user.followees_count, following_path(@user), :style => "color:black;" %></h4>
+            </div>
+
+
+          </div>
+
+          <div class="row" align="center" style="font-size: 25px; margin: 2%;">
+
+            <% if current_user.follows?(@user) %>
+
+              <%= link_to('Unfollow', unfollow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %>
+
+                  <% else %>
+
+              <%= link_to('Follow', follow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %>
+
+            <% end %>
+          </div> 
+        </div>
+
+    
+
+        </div>
+    </div>
+
+    <div class="row">
+        <h3><strong>Bio</strong></h3>
+      <div style="width: 350px">
+         <p class="" style="font-size: 15px; word-wrap: break-word;"><%= @user.bio %></p>
+      </div>
+        
+       
+    </div>
+
   </div>
 </div>
 
   <!-- ################# Business ################# -->
 
-<div class="row" style="margin-top: 5%; color: #D4AF37;" align="center">
+<div class="row" style="margin-top: 10%; color: #D4AF37;" align="center">
   <% if @user.id == current_user.id %>
     <h2 class="font-heading text-center">My Business</h2>
     <% else %>
@@ -83,9 +99,9 @@
                   Action <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                  <li><%= link_to "View", business, class: "btn btn-link" %></li>
-                  <li><%= link_to "Edit", edit_business_path(business), class: "btn btn-link" %></li>
-                  <li><%= link_to 'Delete', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link" %></li>
+                  <li><%= link_to "View", business, class: "btn btn-link", style: "color: #D4AF37" %></li>
+                  <li><%= link_to "Edit", edit_business_path(business), class: "btn btn-link", style: "color: #D4AF37" %></li>
+                  <li><%= link_to 'Delete', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link", style: "color: #D4AF37" %></li>
                 </ul>
 
               </div>
@@ -98,13 +114,11 @@
 </div>
 
 <!-- ################## Product ################### -->
-<hr>
-<div class="row" style="color: #D4AF37">
+
+<div class="row" style="color: #D4AF37; margin-top: 10%;">
     <% if @user.id == current_user.id %>
       <h3 class="font-heading text-center">My Products</h3>
-      <div align="center" style="width: 50%; margin-top: 3%">
-      <h4><em><strong>Please Remember to Check/Send for Tracking Numbers Within 48 hours of Every Sale Within your Black Woman Is God Account. <em>Customers contact information will be located within your <%= link_to "Sales", sales_path(@user) %> page!</em></strong></em></h4>
-      </div>
+
       <% else %>
       <h3 class="font-heading text-center"><%= @user.username %>'s Products</h3>
     <% end %>
@@ -157,8 +171,8 @@
                                     </button>
                                      
                                     <ul class="dropdown-menu" role="menu">
-                                          <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
-                                          <li><%= link_to 'Delete', product, method: :delete, data: { confirm: "Are you sure? Once you delete your product, you will not be able to get it back!" }, class: "btn btn-link" %></li>
+                                          <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link", style: "color: #D4AF37" %></li>
+                                          <li><%= link_to 'Delete', product, method: :delete, data: { confirm: "Are you sure? Once you delete your product, you will not be able to get it back!" }, class: "btn btn-link", style: "color: #D4AF37" %></li>
                                     <% end %>
                                     </ul>
                               </div>
