--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -38,7 +38,7 @@
                 <div class="col-md-6">
                   
                   <%= form.file_field :selections, multiple: true, class: "form-control" %>
-                  <%= form.label :selections %><p>Hold ctrl*</p>
+                  <%= form.label :selections %><p>Hold CTRL*</p>
                 </div>
             </div>
 
