--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="row" align="center">
+<div class="row" align="center" data-aos="fade-up" data-aos-duration="1000">
     <div class="col-md-12" align="center">
       <img src="https://s3.amazonaws.com/tbwigsassets/assets/aboutusgold.png" style="width: 250px; height: auto" >
     </div>
