--- a/app/views/personal_messages/index.html.erb
+++ b/app/views/personal_messages/index.html.erb
@@ -1,18 +1,43 @@
-<ul>
-  <% @personal_messages.each do |personal_message| %>
-    <% if personal_message.body %>
-      <li>
-        <h4><%= personal_message.user.username %></h4>
-        <p><%= personal_message.body %></p>
-      </li>
-    <% end %>
-  <% end %>
-</ul>
+<div class="container">
 
-<%= form_for [@conversation, @personal_message] do |f| %>
-  <div class="field">
-    <%= emojify f.text_area :body, placeholder: "Your message" %>
+  <div>
+    <h1 style="color: #D4AF37">CHAT </h1>
   </div>
 
-  <%= f.submit "Send" %>
+    <div class="row" style="color: #D4AF37" >
+
+
+    <div>
+      <ul>
+        <% @personal_messages.each do |personal_message| %>
+
+          <% if personal_message.body %>
+            <li>
+              <h4><%= personal_message.user.username %></h4>
+              <p><%= personal_message.body %></p>
+            </li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+    <%= form_for [@conversation, @personal_message] do |f| %>
+    <div>
+      <div class="field">
+        <%= emojify f.text_area :body, placeholder: "Your message", style: "color: black; width: 400px; height: 200px" %>
+      </div>
+    </div>
+    <div>
+      <%= f.submit "Send", class: "btn", style: "width: 150px; background-color: #D4AF37; color: black;" %>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+  
 <% end %>
