--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -68,7 +68,7 @@
               <%= f.label :images %>
             </div>
             <%= f.file_field :images, multiple: true, class: "form-control" %>  
-            <p>Upload Slideshow of <br>Images(Hint: Hold Shift to select multiple images)</p> 
+            <p>Upload Slideshow of <br>Images(Hint: Hold CTRL to select multiple images)</p> 
           </div>
 
           <div class="co-md-4">
@@ -96,7 +96,7 @@
 
       <div class="col-md-4">
         <div class="row">
-          <h4>Add all available Colors</h4>
+          <h4 style="color: #D4AF37">Add all available Colors</h4>
         </div>
     
         <div class="row">
@@ -119,7 +119,7 @@
 
       <div class="col-md-4" style="margin-left: 20%">
         <div class="row">
-          <h4>Add all available Sizes</h4>
+          <h4 style="color: #D4AF37">Add all available Sizes</h4>
         </div>
 
         <div class="row">
