--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,15 @@
   border-width: 0.9px;
 }
 
+#flash_alert{
+  background-color: black !important;
+  padding: 10px;
+  font-size: 15px;
+  border-color: rgba(212,175,55, 0.3);
+  border-style: solid;;
+  border-width: 0.9px;
+}
+
 #profile_pic{
   border-radius: 5px;
   border-style: solid;
