--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" data-aos="fade-up" data-aos-duration="1500">
      <div class="col-md-12 center" align="center">
      <div id="edit">    
 
