--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ body {
   // font-family: 'Gugi', cursive;
   // font-family: 'Iceland', cursive;
   font-family: 'Major Mono Display', monospace;
+  font-weight: 150%;
   // font-family: 'Text Me One', sans-serif;
   background-color: black;
   color: white;
@@ -239,8 +240,7 @@ a:hover {
   background-color: #D4AF37;
   border-radius: 25px;
   padding-left: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
+
   margin-bottom: 30px;
   margin-top: 4%;
   padding: 30px;
