--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row" data-aos="fade-up" data-aos-duration="1500">
     <div class="col-md-12 center" align="center">
-    <div id="signup">
+    <div id="signup" style="width: 100%"> 
 
     <h2>Sign up</h2>
 
