--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ body {
   // font-family: 'Gugi', cursive;
   // font-family: 'Iceland', cursive;
   font-family: 'Major Mono Display', monospace;
-  font-weight: 150%;
+  font-weight: bold;
   // font-family: 'Text Me One', sans-serif;
   background-color: black;
   color: white;
