--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,8 +62,9 @@ body {
   // font-family: 'Squada One', cursive;
   // font-family: 'Monoton', cursive;
   // font-family: 'Gugi', cursive;
-  // font-family: 'Iceland', cursive;
-  font-family: 'Major Mono Display', monospace;
+  font-family: 'Iceland', cursive;
+  font-size: 20px;
+  // font-family: 'Major Mono Display', monospace;
   font-weight: bold;
   // font-family: 'Text Me One', sans-serif;
   background-color: black;
