--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,14 +3,14 @@
 
     	<div class="row">
             <div class="col-xs-12">
-                <div class="col-xs-6 left" >
+                <div class="col-md-5 left" >
                     <div align="center">
                       <img src="https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png" style="height: auto; width: 300px;" align="center"> 
                     </div>
 
                 </div> 
 
-                <div class="col-xs-6 right">
+                <div class="col-md-5 right">
  
                     <ul align="center" style="list-style-type: none; margin-top:80px; width: 200px">
                         <li><%= link_to "Home", root_path, style: "color: #D4AF37; margin: 5px;" %></li>
