--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -12,7 +12,7 @@
 
                 <div class="col-md-5 right">
  
-                    <ul align="center" style="list-style-type: none; margin-top:80px; width: 200px">
+                    <ul align="center" style="list-style-type: none; margin-top:80px; width: 200px; margin-left: 22%;">
                         <li><%= link_to "Home", root_path, style: "color: #D4AF37; margin: 5px;" %></li>
                         <li><%= link_to "Store", products_path, style: "color: #D4AF37; margin: 5px;" %></li>
                         <li><%= link_to "Business Services", businesses_path, style: "color: #D4AF37; margin: 5px;" %></li>
