--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,19 +75,19 @@
   <body>
 
   <div class="container-fluid">
-    <div class="row justify-content-center" align="center" style=" margin-left: -7.2%; margin-top: 0%; margin-bottom: 0%;">
+    <div class="row justify-content-center" align="center" style=" margin-top: 0%; margin-bottom: 0%;">
    
           <div class="footer-social-icons">
 
               <ul class="social-icons">
 
-                  <li><a href="https://www.facebook.com/PharaohAllah/" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.facebook.com/PharaohAten" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
 
-                  <li><a href="https://twitter.com/Pharaoh_Allah" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://twitter.com/PHARAOH_ATEN_" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
 
                   <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
 
-                  <li><a href="https://www.instagram.com/pharaoh_aten/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
 
               </ul>
 
